--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "Vintage Addiction",
+  "name": "vintage-addiction",
   "version": "1.0.0",
-  "description": "Aplicación Multijugador",
   "main": "app.js",
-  "proxy": "http://localhost:8888",
+  "license": "MIT",
+  "dependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jakomania/vintageaddiction.git"
-  },
-  "author": "JEPJ Team",
-  "license": "ISC",
-  "homepage": "https://github.com/jakomania/vintageaddiction"
+  "devDependencies": {
+    "@types/node": "^17.0.21"
+  }
 }
